# Embedded_Intent_Recognizer

./: .gitignore  CMakeLists.txt  README.txt  TypeofIntent.cpp  TypeofIntent.h
execute/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  IntentTest.cpp
test/execute/: main.cpp
